--- a/外出申请/外出申请.html
+++ b/外出申请/外出申请.html
@@ -162,10 +162,10 @@
 
 		<div class="top_imgs" style="display: block; ">
 			<div class="top_time_img">
-				<img src="/首页/首页_files/top_time_2_img.jpg" width="100%">
+				<img src="./外出申请_files/top_time_2_img.jpg" width="100%">
 			</div>
 			<div class="top_img" style="margin-top: -1%;">
-				<a href="/首页/ListUI.html"><img src="/外出申请/外出申请_files/top_img.jpg" width="100%"></a>
+				<a href="/首页/ListUI.html"><img src="./外出申请_files/top_img.jpg" width="100%"></a>
 			</div>
 		</div>
 
