--- a/首页/首页.html
+++ b/首页/首页.html
@@ -71,7 +71,7 @@
 		<img src="./首页_files/top_time_2_img.jpg" width="100%">
 	</div>
 	<div class="top_img" style="margin-top: -3%;">
-		<a href="/首页/ListUI.html"><img src="./首页_files/top_img.jpg" width="100%"></a>
+		<a href="https://jarrett-98.github.io/Jarrett.github.io/%E9%A6%96%E9%A1%B5/ListUI.html"><img src="./首页_files/top_img.jpg" width="100%"></a>
 	</div>
 	<div id="container" class="bg">
 		<!-- 加载中 -->
