--- a/外出申请/外出申请.html
+++ b/外出申请/外出申请.html
@@ -165,7 +165,7 @@
 				<img src="./外出申请_files/top_time_2_img.jpg" width="100%">
 			</div>
 			<div class="top_img" style="margin-top: -1%;">
-				<a href="/首页/ListUI.html"><img src="./外出申请_files/top_img.jpg" width="100%"></a>
+				<a href="https://jarrett-98.github.io/Jarrett.github.io/%E9%A6%96%E9%A1%B5/ListUI.html"><img src="./外出申请_files/top_img.jpg" width="100%"></a>
 			</div>
 		</div>
 
