--- a/首页/首页.html
+++ b/首页/首页.html
@@ -114,7 +114,7 @@
 				<div class="main_title"><img src="./首页_files/title_left.png">在校<img src="./首页_files/title_right.png">
 				</div>
 				<div class="main_section">
-					<div class="item"><a href="/外出申请/外出申请.html"><img class="item_icon" src="./首页_files/826119.png"
+					<div class="item"><a href="https://jarrett-98.github.io/Jarrett.github.io/%E5%A4%96%E5%87%BA%E7%94%B3%E8%AF%B7/%E5%A4%96%E5%87%BA%E7%94%B3%E8%AF%B7.html"><img class="item_icon" src="./首页_files/826119.png"
 								alt=""></a>
 						<div class="text_link">外出申请</div>
 					</div>
