--- a/HomePage/HomePage.html
+++ b/HomePage/HomePage.html
@@ -16,12 +16,12 @@
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Expires" content="0">
 	<title>首页</title>
-	<link rel="stylesheet" href="./首页_files/weui.css">
-	<link rel="stylesheet" href="./首页_files/index_h5.css">
+	<link rel="stylesheet" href="./HomePage_files/weui.css">
+	<link rel="stylesheet" href="./HomePage_files/index_h5.css">
 
 	<style type="text/css">
 		body {
-			background: #EDF1F5 url(./首页_files/bg.png) no-repeat;
+			background: #EDF1F5 url(./HomePage_files/bg.png) no-repeat;
 			background-size: 100% 18.5rem;
 		}
 
@@ -68,10 +68,10 @@
 
 <body>
 	<div class="top_time_img">
-		<img src="./首页_files/top_time_2_img.jpg" width="100%">
+		<img src="./HomePage_files/top_time_2_img.jpg" width="100%">
 	</div>
 	<div class="top_img" style="margin-top: -3%;">
-		<a href="https://jarrett-98.github.io/Jarrett.github.io/%E9%A6%96%E9%A1%B5/ListUI.html"><img src="./首页_files/top_img.jpg" width="100%"></a>
+		<a href="https://jarrett-98.github.io/Jarrett.github.io/%E9%A6%96%E9%A1%B5/ListUI.html"><img src="./HomePage_files/top_img.jpg" width="100%"></a>
 	</div>
 	<div id="container" class="bg">
 		<!-- 加载中 -->
@@ -97,67 +97,67 @@
 
 		<div class="main" style="margin-top: 23%;">
 			<div class="main_box">
-				<div class="main_title"><img src="./首页_files/title_left.png">采集<img src="./首页_files/title_right.png">
+				<div class="main_title"><img src="./HomePage_files/title_left.png">采集<img src="./HomePage_files/title_right.png">
 				</div>
 				<div class="main_section">
 					<div class="item" url="/feature/h5/feature.html" onclick="G_FN.jumpUrl()"><img class="item_icon"
-							src="./首页_files/900113.png" alt="">
+							src="./HomePage_files/900113.png" alt="">
 						<div class="text">人脸采集</div>
 					</div>
 					<div class="item" url="/safe/h5/safe.html" onclick="G_FN.jumpUrl()"><img class="item_icon"
-							src="./首页_files/869860.png" alt="">
+							src="./HomePage_files/869860.png" alt="">
 						<div class="text">使用授权</div>
 					</div>
 				</div>
 			</div>
 			<div class="main_box">
-				<div class="main_title"><img src="./首页_files/title_left.png">在校<img src="./首页_files/title_right.png">
+				<div class="main_title"><img src="./HomePage_files/title_left.png">在校<img src="./HomePage_files/title_right.png">
 				</div>
 				<div class="main_section">
-					<div class="item"><a href="https://jarrett-98.github.io/Jarrett.github.io/%E5%A4%96%E5%87%BA%E7%94%B3%E8%AF%B7/%E5%A4%96%E5%87%BA%E7%94%B3%E8%AF%B7.html"><img class="item_icon" src="./首页_files/826119.png"
+					<div class="item"><a href="https://jarrett-98.github.io/Jarrett.github.io/%E5%A4%96%E5%87%BA%E7%94%B3%E8%AF%B7/%E5%A4%96%E5%87%BA%E7%94%B3%E8%AF%B7.html"><img class="item_icon" src="./HomePage_files/826119.png"
 								alt=""></a>
 						<div class="text_link">外出申请</div>
 					</div>
 				</div>
 			</div>
 			<div class="main_box">
-				<div class="main_title"><img src="./首页_files/title_left.png">离校·返校<img src="./首页_files/title_right.png">
+				<div class="main_title"><img src="./HomePage_files/title_left.png">离校·返校<img src="./HomePage_files/title_right.png">
 				</div>
 				<div class="main_section">
 					<div class="item" url="/leave/h5/leave.html" onclick="G_FN.jumpUrl()"><img class="item_icon"
-							src="./首页_files/98100.png" alt="">
+							src="./HomePage_files/98100.png" alt="">
 						<div class="text">离校登记</div>
 					</div>
 					<div class="item" url="/rtn/h5/apply.html" onclick="G_FN.jumpUrl()"><img class="item_icon"
-							src="./首页_files/990622.png" alt="">
+							src="./HomePage_files/990622.png" alt="">
 						<div class="text">返校申请</div>
 					</div>
 					<div class="item" url="/rtn/h5/passsite.html" onclick="G_FN.jumpUrl()"><img class="item_icon"
-							src="./首页_files/537993.png" alt="">
+							src="./HomePage_files/537993.png" alt="">
 						<div class="text">返程填报</div>
 					</div>
 				</div>
 			</div>
 			<div class="main_box">
-				<div class="main_title"><img src="./首页_files/title_left.png">报到<img src="./首页_files/title_right.png">
+				<div class="main_title"><img src="./HomePage_files/title_left.png">报到<img src="./HomePage_files/title_right.png">
 				</div>
 				<div class="main_section">
 					<div class="item" url="/register/h5/register.html" onclick="G_FN.jumpUrl()"><img class="item_icon"
-							src="./首页_files/572323.png" alt="">
+							src="./HomePage_files/572323.png" alt="">
 						<div class="text">开学报到</div>
 					</div>
 				</div>
 			</div>
 			<div class="main_box">
-				<div class="main_title"><img src="./首页_files/title_left.png">健康信息<img src="./首页_files/title_right.png">
+				<div class="main_title"><img src="./HomePage_files/title_left.png">健康信息<img src="./HomePage_files/title_right.png">
 				</div>
 				<div class="main_section">
 					<div class="item" url="/health/h5/health.html" onclick="G_FN.jumpUrl()"><img class="item_icon"
-							src="./首页_files/856151.png" alt="">
+							src="./HomePage_files/856151.png" alt="">
 						<div class="text">健康填报</div>
 					</div>
 					<div class="item" url="/health/h5/fever.html" onclick="G_FN.jumpUrl()"><img class="item_icon"
-							src="./首页_files/874776.png" alt="">
+							src="./HomePage_files/874776.png" alt="">
 						<div class="text">排查登记</div>
 					</div>
 				</div>
@@ -177,11 +177,11 @@
 
 
 	<!-- <script type="text/javascript" src="../../js/jquery-3.3.1.min.js"></script> -->
-	<script type="text/javascript" src="./首页_files/jquery.min.js.下载"></script>
-	<script type="text/javascript" src="./首页_files/weui.js.下载"></script>
-	<script type="text/javascript" src="./首页_files/SysUtils.js.下载"></script>
-	<script type="text/javascript" src="./首页_files/WeuiUtils.js.下载"></script>
-	<script type="text/javascript" src="./首页_files/index_h5.js.下载"></script>
+	<script type="text/javascript" src="./HomePage_files/jquery.min.js.下载"></script>
+	<script type="text/javascript" src="./HomePage_files/weui.js.下载"></script>
+	<script type="text/javascript" src="./HomePage_files/SysUtils.js.下载"></script>
+	<script type="text/javascript" src="./HomePage_files/WeuiUtils.js.下载"></script>
+	<script type="text/javascript" src="./HomePage_files/index_h5.js.下载"></script>
 
 	<script type="text/javascript">
 		const format3 = (date) => `${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`
