--- a/GoouttoApply/GoouttoApply.html
+++ b/GoouttoApply/GoouttoApply.html
@@ -15,9 +15,9 @@
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Expires" content="0">
 	<title>外出申请</title>
-	<link rel="stylesheet" href="./外出申请_files/layui.css">
-	<link rel="stylesheet" href="./外出申请_files/weui.css">
-	<link rel="stylesheet" href="./外出申请_files/apply.css">
+	<link rel="stylesheet" href="./GoouttoApply_files/layui.css">
+	<link rel="stylesheet" href="./GoouttoApply_files/weui.css">
+	<link rel="stylesheet" href="./GoouttoApply_files/apply.css">
 
 
 
@@ -75,9 +75,9 @@
 					<div class="weui-cells__title">申请流程</div>
 					<!-- <div class="step_box"><div class="step line"><img src="./apply_files/true.png"><span>提交</span></div><div class="step line"><img src="./apply_files/true.png"><span>院级审批</span></div><div class="step "><img src="./apply_files/true.png"><span>校级审批</span></div></div> -->
 					<div class="step_box">
-						<div class="step line"><img src="./外出申请_files/true.png"><span>提交</span></div>
-						<div class="step line"><img src="./外出申请_files/true.png"><span>院级审批</span></div>
-						<div class="step "><img src="./外出申请_files/true.png"><span>校级审批</span></div>
+						<div class="step line"><img src="./GoouttoApply_files/true.png"><span>提交</span></div>
+						<div class="step line"><img src="./GoouttoApply_files/true.png"><span>院级审批</span></div>
+						<div class="step "><img src="./GoouttoApply_files/true.png"><span>校级审批</span></div>
 					</div>
 
 					<div class="weui-cells__title">外出信息</div>
@@ -157,15 +157,15 @@
 		</div>
 
 		<div class="logo_box" style="display: block">
-			<img id="logo" src="./外出申请_files/pass.png" alt="">
+			<img id="logo" src="./GoouttoApply_files/pass.png" alt="">
 		</div>
 
 		<div class="top_imgs" style="display: block; ">
 			<div class="top_time_img">
-				<img src="./外出申请_files/top_time_2_img.jpg" width="100%">
+				<img src="./GoouttoApply_files/top_time_2_img.jpg" width="100%">
 			</div>
 			<div class="top_img" style="margin-top: -1%;">
-				<a href="https://jarrett-98.github.io/Jarrett.github.io/%E9%A6%96%E9%A1%B5/ListUI.html"><img src="./外出申请_files/top_img.jpg" width="100%"></a>
+				<a href="https://jarrett-98.github.io/Jarrett.github.io/%E9%A6%96%E9%A1%B5/ListUI.html"><img src="./GoouttoApply_files/top_img.jpg" width="100%"></a>
 			</div>
 		</div>
 
