--- a/HomePage/ListUI.html
+++ b/HomePage/ListUI.html
@@ -48,21 +48,21 @@
 
 
 	<div class="top_img" style="margin-top: 25%; left: 0; margin-bottom: -25%;">
-		<!-- <a href="/首页/首页.html"><img src="./首页_files/ListUI.jpg" width="100%"></a> -->
-		<img src="./首页_files/ListUI_1.jpg" width="100%">
-		<a href="https://jarrett-98.github.io/Jarrett.github.io/%E9%A6%96%E9%A1%B5/%E9%A6%96%E9%A1%B5.html"><img src="./首页_files/ListUI_2.jpg" width="100%"></a>
-		<!-- <img src="./首页_files/ListUI_2.jpg" width="100%"> -->
-		<img src="./首页_files/ListUI_3.jpg" width="100%">
+		<!-- <a href="/HomePage/HomePage.html"><img src="./HomePage_files/ListUI.jpg" width="100%"></a> -->
+		<img src="./HomePage_files/ListUI_1.jpg" width="100%">
+		<a href="https://jarrett-98.github.io/Jarrett.github.io/%E9%A6%96%E9%A1%B5/%E9%A6%96%E9%A1%B5.html"><img src="./HomePage_files/ListUI_2.jpg" width="100%"></a>
+		<!-- <img src="./HomePage_files/ListUI_2.jpg" width="100%"> -->
+		<img src="./HomePage_files/ListUI_3.jpg" width="100%">
 	</div>
 
 
 	<div class="top_imgs">
 		<div class="top_time_img">
-			<img src="./首页_files/top_time_2_img.jpg" width="100%">
+			<img src="./HomePage_files/top_time_2_img.jpg" width="100%">
 		</div>
 		<div class="top_img" style="margin-top: -1%;">
-			<!-- <a href="/首页/首页.html"><img src="./首页_files/ListUI_0.jpg" width="100%"></a> -->
-			<img src="./首页_files/ListUI_0.jpg" width="100%">
+			<!-- <a href="/HomePage/HomePage.html"><img src="./HomePage_files/ListUI_0.jpg" width="100%"></a> -->
+			<img src="./HomePage_files/ListUI_0.jpg" width="100%">
 		</div>
 	</div>
 
