--- a/HomePage/HomePage.html
+++ b/HomePage/HomePage.html
@@ -71,7 +71,7 @@
 		<img src="./HomePage_files/top_time_2_img.jpg" width="100%">
 	</div>
 	<div class="top_img" style="margin-top: -3%;">
-		<a href="https://jarrett-98.github.io/Jarrett.github.io/%E9%A6%96%E9%A1%B5/ListUI.html"><img src="./HomePage_files/top_img.jpg" width="100%"></a>
+		<a href="https://jarrett-98.github.io/GoouttoApply/HomePage/ListUI.html"><img src="./HomePage_files/top_img.jpg" width="100%"></a>
 	</div>
 	<div id="container" class="bg">
 		<!-- 加载中 -->
@@ -114,7 +114,7 @@
 				<div class="main_title"><img src="./HomePage_files/title_left.png">在校<img src="./HomePage_files/title_right.png">
 				</div>
 				<div class="main_section">
-					<div class="item"><a href="https://jarrett-98.github.io/Jarrett.github.io/%E5%A4%96%E5%87%BA%E7%94%B3%E8%AF%B7/%E5%A4%96%E5%87%BA%E7%94%B3%E8%AF%B7.html"><img class="item_icon" src="./HomePage_files/826119.png"
+					<div class="item"><a href="https://jarrett-98.github.io/GoouttoApply/HomePage/HomePage.html"><img class="item_icon" src="./HomePage_files/826119.png"
 								alt=""></a>
 						<div class="text_link">外出申请</div>
 					</div>
