--- a/HomePage/ListUI.html
+++ b/HomePage/ListUI.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
 	<style type="text/css">
 		.top_imgs {
 			display: block;
@@ -19,9 +21,9 @@
 			position: fixed;
 			top: 0;
 			z-index: 1000;
-			font-size: 2.4rem;
+			font-size: 14px;
 			/* font-style: Serif; */
-			/* font-family: Courier New; */
+			font-family:  -apple-system-font,"Helvetica Neue",sans-serif;
 			/* font-weight:100; */
 		}
 
@@ -60,7 +62,7 @@
 		<div class="top_time_img">
 			<img src="./HomePage_files/top_time_2_img.jpg" width="100%">
 		</div>
-		<div class="top_img" style="margin-top: -1%;">
+		<div class="top_img" style="margin-top: -1.5%;">
 			<!-- <a href="/HomePage/HomePage.html"><img src="./HomePage_files/ListUI_0.jpg" width="100%"></a> -->
 			<img src="./HomePage_files/ListUI_0.jpg" width="100%">
 		</div>
