--- a/GoouttoApply/GoouttoApply.html
+++ b/GoouttoApply/GoouttoApply.html
@@ -14,6 +14,8 @@
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Expires" content="0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	
 	<title>外出申请</title>
 	<link rel="stylesheet" href="./GoouttoApply_files/layui.css">
 	<link rel="stylesheet" href="./GoouttoApply_files/weui.css">
@@ -25,7 +27,7 @@
 
 <body>
 
-	<div id="container" style="margin-top: 23%;">
+	<div id="container" style="margin-top: -12%;">
 		<!-- 加载中 -->
 		<div class="loading_mask" style="display: none;"></div>
 		<div class="loading_tip" style="display: none;">
@@ -71,6 +73,12 @@
 			<form class="input-group layui-form" lay-filter="filter_form">
 
 				<div class="weui-cells__group weui-cells__group_form">
+
+					<div class="weui-cells__title"></div>
+					<div class="weui-cells__title"></div>
+					<div class="weui-cells__title"></div>
+					<div class="weui-cells__title" style="text-align: center;" >此网页由 enroll.scut.edu.cn 提供</div>
+					<div class="weui-cells__title"></div>
 
 					<div class="weui-cells__title">申请流程</div>
 					<!-- <div class="step_box"><div class="step line"><img src="./apply_files/true.png"><span>提交</span></div><div class="step line"><img src="./apply_files/true.png"><span>院级审批</span></div><div class="step "><img src="./apply_files/true.png"><span>校级审批</span></div></div> -->
