--- a/HomePage/HomePage.html
+++ b/HomePage/HomePage.html
@@ -15,6 +15,8 @@
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Expires" content="0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
 	<title>首页</title>
 	<link rel="stylesheet" href="./HomePage_files/weui.css">
 	<link rel="stylesheet" href="./HomePage_files/index_h5.css">
@@ -48,6 +50,14 @@
 			z-index: 1000;
 			font-size: 14px;
 		}
+		
+		.top_imgs {
+			display: block;
+			width: 100%;
+			position: fixed;
+			top: 0;
+			left: 0;
+		}
 
 
 		/* .top_img img{
@@ -67,12 +77,7 @@
 </head>
 
 <body>
-	<div class="top_time_img">
-		<img src="./HomePage_files/top_time_2_img.jpg" width="100%">
-	</div>
-	<div class="top_img" style="margin-top: -3%;">
-		<a href="https://jarrett-98.github.io/GoouttoApply/HomePage/ListUI.html"><img src="./HomePage_files/top_img.jpg" width="100%"></a>
-	</div>
+
 	<div id="container" class="bg">
 		<!-- 加载中 -->
 		<!-- <div class="loading_mask" style="display: none;"></div>
@@ -173,6 +178,16 @@
 			</div>
 		</div> -->
 
+	</div>
+
+	<div class="top_imgs">
+		<div class="top_time_img">
+			<img src="./首页_files/top_time_2_img.jpg" width="100%">
+		</div>
+		<div class="top_img" style="margin-top: -3%;">
+			<!-- <a href="/首页/首页.html"><img src="./首页_files/ListUI_0.jpg" width="100%"></a> -->
+			<a href="/首页/ListUI.html"><img src="./首页_files/top_img.jpg" width="100%"></a>
+		</div>
 	</div>
 
 
