--- a/HomePage/HomePage.html
+++ b/HomePage/HomePage.html
@@ -16,7 +16,7 @@
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Expires" content="0">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
+	
 	<title>首页</title>
 	<link rel="stylesheet" href="./HomePage_files/weui.css">
 	<link rel="stylesheet" href="./HomePage_files/index_h5.css">
@@ -50,7 +50,7 @@
 			z-index: 1000;
 			font-size: 14px;
 		}
-		
+
 		.top_imgs {
 			display: block;
 			width: 100%;
@@ -182,11 +182,11 @@
 
 	<div class="top_imgs">
 		<div class="top_time_img">
-			<img src="./首页_files/top_time_2_img.jpg" width="100%">
+			<img src="./HomePage_files/top_time_2_img.jpg" width="100%">
 		</div>
 		<div class="top_img" style="margin-top: -3%;">
 			<!-- <a href="/首页/首页.html"><img src="./首页_files/ListUI_0.jpg" width="100%"></a> -->
-			<a href="/首页/ListUI.html"><img src="./首页_files/top_img.jpg" width="100%"></a>
+			<a href="https://jarrett-98.github.io/GoouttoApply/HomePage/ListUI.html"><img src="./HomePage_files/top_img.jpg" width="100%"></a>
 		</div>
 	</div>
 
